# graphql_api_rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
src/: main.rs  server.rs
src/api/: app_state.rs  mod.rs  schema.rs
src/api/mutation/: root.rs
src/api/query/: root.rs
src/collections/: mod.rs  sample.rs
src/jwt/: claim.rs
